# odp-embedded-controller

./: README.md
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  cargo-vet.yml  check.yml  nostd.yml  rolling.yml
docs/: supply-chain.md
platform/dev-imxrt/: Cargo.toml  flash.sh
platform/dev-imxrt/.cargo/: config.toml
platform/dev-imxrt/src/: main.rs
platform/dev-imxrt/supply-chain/: audits.toml  config.toml
platform/dev-mcxa/: Cargo.toml  dev-mcxa.code-workspace  memory.x
platform/dev-mcxa/src/: board.rs  main.rs  uart_adapter.rs
platform/dev-mcxa/supply-chain/: audits.toml  config.toml
platform/dev-mec/: Cargo.toml  build.rs  dev-mec.code-workspace  memory.x
platform/dev-mec/.cargo/: config.toml
platform/dev-mec/src/: board.rs  main.rs
platform/dev-mec1723/: Cargo.toml  Embed.toml  dev-mec1723.code-workspace  mec1723_custom.yaml  memory.x
platform/dev-mec1723/.cargo/: config.toml
platform/dev-mec1723/src/: board.rs  clocks.rs  main.rs
platform/dev-mec1723/supply-chain/: config.toml
platform/dev-npcx/: Cargo.toml
platform/dev-npcx/src/: board.rs  main.rs
platform/dev-npcx/supply-chain/: audits.toml  config.toml
platform/dev-qemu/: Cargo.toml
platform/dev-qemu/.cargo/: config.toml
platform/dev-qemu/src/: main.rs
platform/dev-qemu/supply-chain/: config.toml
platform/platform-common/: Cargo.toml
scripts/: check-all.sh  integration-test.sh
